Lab/k8s_with_contrail/lab_exercise/lab1/lab1_client.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: client1
spec:
  containers:
  - name: webserver
    image: 172.16.14.10:5000/webserver:0.1
    imagePullPolicy: Always 
    securityContext:
      privileged: true
  nodeName: node1
---
apiVersion: v1
kind: Pod
metadata:
  name: client2
spec:
  containers:
  - name: webserver
    image: 172.16.14.10:5000/webserver:0.1
    imagePullPolicy: Always 
    securityContext:
      privileged: true
  nodeName: node2
  
---
apiVersion: v1
kind: Pod
metadata:
  name: client3
spec:
  containers:
  - name: webserver
    image: 172.16.14.10:5000/webserver:0.1
    imagePullPolicy: Always 
    securityContext:
      privileged: true
  nodeName: node3
