Lab/k8s_with_contrail/lab_exercise/lab1/lab1_lb.yaml
#service-web-lb.yaml 
apiVersion: v1
kind: Service
metadata:
  name: webserver2
spec:
  selector:
    app: webserver2
  type: LoadBalancer
  ports:
  - targetPort: 80
    port: 80
---
#rc-webserver-do.yaml 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver2
  labels:
    app: webserver2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver2
    matchExpressions:
      - {key: app, operator: In, values: [webserver2]}
  template:
    metadata:
      name: webserver2
      labels:
        app: webserver2
    spec:
      containers: 
      - name: webserver2
        image: 172.16.14.10:5000/webserver:0.1
        imagePullPolicy: Always
        securityContext:
           privileged: true
        ports: 
        - containerPort: 80
