Lab/k8s_with_contrail/lab_exercise/lab1/lab1_ingress1a.yaml
---
#simple backend services
apiVersion: networking.k8s.io/v1
#apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress1
spec:
  defaultBackend:
    service:
      name: webserver3a
      port: 
        number: 80
